--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Meteoro | Dino | A-Frame</title>
+    <title>Meteor|Dino / A-Frame</title>
     <!-- Los scripts van en el head, tanto el de A-Frame, como el de app.js -->
     <script src="https://aframe.io/releases/1.4.0/aframe.min.js"></script>
     <script src="./js/app.js"></script>
